# sudoku_solver

./: CMakeLists.txt  Makefile  README.md  sudoku1  sudoku1.result
src/: main.cxx
src/config/: config.h.in
src/include/: config.h
